[package]
name = "bmi270"
version = "0.1.0"
edition = "2024"

[dependencies]
device-driver = { version = "1.0.0-rc.1", features = ["yaml"] }
embedded-hal = "1.0"
embedded-hal-async = "1.0"
defmt = { version = "0.3", optional = true }
heapless = "0.8"

[features]
defmt-03 = ["dep:defmt", "device-driver/defmt-03"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11", features = ["embedded-hal-async"] }
async-std = { version = "1.13", features = ["attributes"] }
